--- a/src/app/transactions/create-transaction/create-transaction.component.html
+++ b/src/app/transactions/create-transaction/create-transaction.component.html
@@ -1,6 +1,6 @@
 <div class="container m-b-5" fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="end" fxLayoutGap="1%">
   <div fxFlex="100%" align="center" class="header">
-    <h2  class="m-5">MÀN HÌNH GIAO DỊCH - THÔNG TIN GIAO DỊCH</h2>
+    <h2 class="m-5">MÀN HÌNH GIAO DỊCH - THÔNG TIN GIAO DỊCH</h2>
   </div>
 </div>
 <div class="container" fxLayout="column" fxLayoutGap="2%">
@@ -103,7 +103,7 @@
                   (keyup)="amountTransaction.value = this.formatCurrency(amountTransaction.value)"
                   #amountTransaction
                 />
-                <mat-error > Thông tin bắt buộc nhập! </mat-error>
+                <mat-error> Thông tin bắt buộc nhập! </mat-error>
               </mat-form-field>
             </div>
             <div fxFlex.gt-sm="10%">
@@ -116,7 +116,7 @@
                   formControlName="rate"
                   (change)="this.onchangeRate($event)"
                 />
-                <mat-error > Thông tin bắt buộc nhập! </mat-error>
+                <mat-error> Thông tin bắt buộc nhập! </mat-error>
               </mat-form-field>
             </div>
           </div>
@@ -168,7 +168,6 @@
               <div fxFlex="20%">{{ formatCurrency(transactionInfo.txnAmountAfterFee) }}</div>
               <div fxFlex="20%"></div>
             </div>
-
           </div>
         </div>
       </div>
@@ -206,14 +205,14 @@
             <th mat-header-cell *matHeaderCellDef>Số tiền</th>
             <td mat-cell *matCellDef="let booking; let i = index">
               <mat-form-field>
-              <input
-                matInput
-                [(ngModel)]="booking.amountBooking"
-                [disabled]="i == ( listRollTermBooking.length - 1 ) "
-                [ngModelOptions]="{ standalone: true }"
-                (change)="this.calculateTotalBookingAmount()"
-                (keyup)="booking.amountBooking = this.formatCurrency(booking.amountBooking)"
-                required
+                <input
+                  matInput
+                  [(ngModel)]="booking.amountBooking"
+                  [disabled]="i == listRollTermBooking.length - 1"
+                  [ngModelOptions]="{ standalone: true }"
+                  (change)="this.calculateTotalBookingAmount()"
+                  (keyup)="booking.amountBooking = this.formatCurrency(booking.amountBooking)"
+                  required
                 />
               </mat-form-field>
             </td>
@@ -277,19 +276,19 @@
                 matNativeControl
               >
                 <option *ngFor="let terminal of transactionInfo.listTerminal" [value]="terminal.terminalId">
-                  {{ terminal.terminalName }} - Hạn mức khả dụng: {{ terminal.limitRemain  | money }}
+                  {{ terminal.terminalName }} - Hạn mức khả dụng: {{ terminal.limitRemain | money }}
                 </option>
               </select>
             </mat-form-field>
           </div>
         </div>
         <div fxFlex.gt-sm="2%" fxLayout="row wrap" class="content"></div>
-        <div fxFlex.gt-sm="15%" fxLayout="row wrap" class="content" *midasHasActiveModule="'billModule'">
+        <div fxFlex.gt-sm="15%" fxLayout="row wrap" class="content">
           <div fxFlex="100%">
             <mat-form-field>
               <mat-label>Số tiền cần quẹt(VNĐ)</mat-label>
               <input readonly matInput formControlName="txnAmount" />
-              <mat-error > Thông tin bắt buộc nhập! </mat-error>
+              <mat-error> Thông tin bắt buộc nhập! </mat-error>
             </mat-form-field>
           </div>
         </div>
@@ -304,7 +303,7 @@
                 (change)="this.calculateFeeTransaction()"
                 (keyup)="amountPosBill.value = this.formatCurrency(amountPosBill.value)"
               />
-              <mat-error > Thông tin bắt buộc nhập! </mat-error>
+              <mat-error> Thông tin bắt buộc nhập! </mat-error>
             </mat-form-field>
           </div>
         </div>
@@ -313,7 +312,7 @@
             <mat-form-field>
               <mat-label> Số batch</mat-label>
               <input matInput formControlName="batchNo" />
-              <mat-error > Thông tin bắt buộc nhập! </mat-error>
+              <mat-error> Thông tin bắt buộc nhập! </mat-error>
             </mat-form-field>
           </div>
         </div>
@@ -322,7 +321,7 @@
             <mat-form-field>
               <mat-label> Số trace</mat-label>
               <input matInput formControlName="traceNo" />
-              <mat-error > Thông tin bắt buộc nhập! </mat-error>
+              <mat-error> Thông tin bắt buộc nhập! </mat-error>
             </mat-form-field>
           </div>
         </div>
