and hard max amount rollterm schedule

--- a/src/app/transactions/create-transaction/create-transaction.component.html
+++ b/src/app/transactions/create-transaction/create-transaction.component.html
@@ -187,7 +187,7 @@
         align="center"
         style="color: blue; font-weight: bold"
       >
-        Lịch thực hiện đáo hạn thẻ (Tổng: {{ this.formatCurrency(this.totalBookingAmount) }})
+        Lịch thực hiện đáo hạn thẻ (Tổng: {{ this.transactionInfo.requestAmount }})
       </h3>
       <div
         fxFlex="100%"
