--- a/src/app/transactions/dialog/create-success-transaction-dialog/create-success-transaction-dialog.component.html
+++ b/src/app/transactions/dialog/create-success-transaction-dialog/create-success-transaction-dialog.component.html
@@ -29,7 +29,7 @@
       </a>
     </li>
     <li *ngIf="transactionInfo.type != 'cash'">
-      Trở về màn hình ĐHT
+      Trở về màn hình BHCN
       <a mat-dialog-close mat-mini-fab href="#/transaction/rollTermSchedule">
         <fa-icon icon="arrow-alt-circle-down"> </fa-icon>
       </a>
