--- a/src/app/transactions/fee-paid-management/fee-paid-management.component.html
+++ b/src/app/transactions/fee-paid-management/fee-paid-management.component.html
@@ -203,7 +203,7 @@
             mat-button
             class="btn btn-success"
           >
-            ĐHT
+            BHCN
           </button>
           <button *ngSwitchCase="'BATCH'" style="background: #e74c3c; color: white" mat-button class="btn btn-success">
             Lô
