--- a/src/app/core/shell/toolbar/menu/menu.component.html
+++ b/src/app/core/shell/toolbar/menu/menu.component.html
@@ -1,5 +1,5 @@
 <!-- Floating Menu -->
-<eco-fab-speed-dial #myFAB fixed="true" [open]="isMenuOpen"  >
+<eco-fab-speed-dial #myFAB fixed="true" [open]="isMenuOpen">
   <eco-fab-speed-dial-trigger spin="true" spin360>
     <button color="accent" mat-fab (click)="doAction('trigger')" matTooltip="Menu tác vụ" matTooltipPosition="before">
       <mat-icon class="spin360">menu</mat-icon>
@@ -7,54 +7,107 @@
   </eco-fab-speed-dial-trigger>
 
   <eco-fab-speed-dial-actions>
-    <button color="accent" mat-mini-fab [matMenuTriggerFor]="institutionMenu" #institutionMenuTrigger="matMenuTrigger"
-      matTooltip="Danh sách" matTooltipPosition="before">
+    <button
+      color="accent"
+      mat-mini-fab
+      [matMenuTriggerFor]="institutionMenu"
+      #institutionMenuTrigger="matMenuTrigger"
+      matTooltip="Danh sách"
+      matTooltipPosition="before"
+    >
       <i class="fas fa-list-alt"></i>
       <!-- {{ "Toolbar_Component.labelInstitution" | translate }} -->
     </button>
 
-    <button color="accent" mat-mini-fab [matMenuTriggerFor]="POSPartnerMenu" #POSPartnerMenuTrigger="matMenuTrigger"
-      matTooltip="May POS" matTooltipPosition="before">
+    <button
+      color="accent"
+      mat-mini-fab
+      [matMenuTriggerFor]="POSPartnerMenu"
+      #POSPartnerMenuTrigger="matMenuTrigger"
+      matTooltip="May POS"
+      matTooltipPosition="before"
+    >
       <i class="fas fa-sim-card"></i>
       <!-- Máy POS và đối tác -->
     </button>
 
-    <button color="accent" mat-mini-fab [matMenuTriggerFor]="transactionMenu" matTooltip="Bản kê giao dịch"
-      matTooltipPosition="before">
+    <button
+      color="accent"
+      mat-mini-fab
+      [matMenuTriggerFor]="transactionMenu"
+      matTooltip="Bản kê giao dịch"
+      matTooltipPosition="before"
+    >
       <i class="fas fa-credit-card"></i>
       <!-- Giao dịch -->
     </button>
 
-    <button color="accent" mat-mini-fab [matMenuTriggerFor]="BookingMenu" matTooltip="Booking nguồn tiền" matTooltipPosition="before">
+    <button
+      color="accent"
+      mat-mini-fab
+      [matMenuTriggerFor]="BookingMenu"
+      matTooltip="Booking nguồn tiền"
+      matTooltipPosition="before"
+    >
       <i class="fas fa-book-medical"></i>
       <!-- Booking -->
     </button>
 
-    <button color="accent" mat-mini-fab *midasHasActiveModule="'campaignModule'" [matMenuTriggerFor]="Marketing"
-      matTooltip="Marketting" matTooltipPosition="before">
-      <label *midasHasPermission="'POS_UPDATE'||'ALL_FUNCTIONS'">
+    <button
+      color="accent"
+      mat-mini-fab
+      *midasHasActiveModule="'campaignModule'"
+      [matMenuTriggerFor]="Marketing"
+      matTooltip="Marketting"
+      matTooltipPosition="before"
+    >
+      <label *midasHasPermission="'POS_UPDATE' || 'ALL_FUNCTIONS'">
         <i class="fas fa-ad"></i>
         <!-- Marketing -->
       </label>
     </button>
 
     <span *midasHasPermission="'ALL_FUNCTIONS'" fxHide.lt-lg="true">
-      <button color="accent" mat-mini-fab [routerLink]="['/accounting']" matTooltip="Kế toán" matTooltipPosition="before">
+      <button
+        color="accent"
+        mat-mini-fab
+        [routerLink]="['/accounting']"
+        matTooltip="Kế toán"
+        matTooltipPosition="before"
+      >
         <fa-icon class="mr-05" icon="money-bill-alt" size="lg"></fa-icon>
         <!-- {{ "Toolbar_Component.lblAccounting" | translate }} -->
       </button>
-      <button color="accent" mat-mini-fab [matMenuTriggerFor]="reportsMenu" #reportsMenuTrigger="matMenuTrigger" matTooltip="Báo cáo"
-        matTooltipPosition="before">
+      <button
+        color="accent"
+        mat-mini-fab
+        [matMenuTriggerFor]="reportsMenu"
+        #reportsMenuTrigger="matMenuTrigger"
+        matTooltip="Báo cáo"
+        matTooltipPosition="before"
+      >
         <fa-icon class="mr-05" icon="chart-bar" size="lg"></fa-icon>
         <!-- {{ "Toolbar_Component.lblReport" | translate }} -->
       </button>
-      <button color="accent" mat-mini-fab [matMenuTriggerFor]="adminMenu" #adminMenuTrigger="matMenuTrigger"
-        matTooltip="Quản trị hệ thống" matTooltipPosition="before">
+      <button
+        color="accent"
+        mat-mini-fab
+        [matMenuTriggerFor]="adminMenu"
+        #adminMenuTrigger="matMenuTrigger"
+        matTooltip="Quản trị hệ thống"
+        matTooltipPosition="before"
+      >
         <fa-icon class="mr-05" icon="shield-alt" size="lg"></fa-icon>
         <!-- {{ "Toolbar_Component.lblAdmin" | translate }} -->
       </button>
-      <button color="accent" mat-mini-fab [matMenuTriggerFor]="selfServiceMenu" #selfServiceMenuTrigger="matMenuTrigger"
-        matTooltip="Cài đặt SelfService" matTooltipPosition="before">
+      <button
+        color="accent"
+        mat-mini-fab
+        [matMenuTriggerFor]="selfServiceMenu"
+        #selfServiceMenuTrigger="matMenuTrigger"
+        matTooltip="Cài đặt SelfService"
+        matTooltipPosition="before"
+      >
         <fa-icon class="mr-05" icon="users" size="lg"></fa-icon>
         <!-- {{ "Toolbar_Component.lblSelfService" | translate }} -->
       </button>
@@ -62,11 +115,14 @@
   </eco-fab-speed-dial-actions>
 </eco-fab-speed-dial>
 
-
-
 <!-- Menu con -->
-<mat-menu #institutionMenu="matMenu" [overlapTrigger]="false" yPosition="above" xPosition="before"
-  backdropClass="mymenu">
+<mat-menu
+  #institutionMenu="matMenu"
+  [overlapTrigger]="false"
+  yPosition="above"
+  xPosition="before"
+  backdropClass="mymenu"
+>
   <button mat-menu-item routerLink="/clients/customer">{{ "Toolbar_Component.lblClient" | translate }}</button>
   <button mat-menu-item routerLink="/clients/staff">Nhân viên</button>
   <button mat-menu-item routerLink="/groups">{{ "Toolbar_Component.lblGroup" | translate }}</button>
@@ -87,13 +143,17 @@
     </span> -->
 </mat-menu>
 
-<mat-menu #POSPartnerMenu="matMenu" [overlapTrigger]="false" yPosition="above" xPosition="before"
-  backdropClass="mymenu">
-  <button *midasHasPermission="'POS_UPDATE'" mat-menu-item routerLink="/terminals">
-    Điều chuyển máy POS
+<mat-menu
+  #POSPartnerMenu="matMenu"
+  [overlapTrigger]="false"
+  yPosition="above"
+  xPosition="before"
+  backdropClass="mymenu"
+>
+  <button *midasHasPermission="'POS_UPDATE'" mat-menu-item routerLink="/terminals">Điều chuyển máy POS</button>
+  <button mat-menu-item *midasHasPermission="'POS_READ'" routerLink="/terminals/limit">
+    {{ "Quản lý hạn mức POS" | translate }}
   </button>
-  <button mat-menu-item *midasHasPermission="'POS_READ'" routerLink="/terminals/limit">{{ "Quản lý hạn mức POS" |
-    translate }}</button>
   <button mat-menu-item *midasHasPermission="'POS_UPDATE'" routerLink="/terminals">
     {{ "Quản lý máy POS" | translate }}
   </button>
@@ -101,13 +161,17 @@
     {{ "Toolbar_Component.lblThirdParty" | translate }}
   </button>
   <button mat-menu-item routerLink="/groups/spending-limit">Hạn mức chi tiêu</button>
-
 </mat-menu>
 
-<mat-menu #transactionMenu="matMenu" [overlapTrigger]="false" yPosition="above" xPosition="before"
-  backdropClass="mymenu">
+<mat-menu
+  #transactionMenu="matMenu"
+  [overlapTrigger]="false"
+  yPosition="above"
+  xPosition="before"
+  backdropClass="mymenu"
+>
   <button mat-menu-item routerLink="/transaction">Quản lý giao dịch</button>
-  <button mat-menu-item routerLink="/transaction/rollTermSchedule">Quản lý đáo hạn thẻ</button>
+  <button mat-menu-item routerLink="/transaction/rollTermSchedule">Quản lý bán hàng công nợ</button>
   <button mat-menu-item routerLink="/transaction/fee-paid-management">Quản lý phí giao dịch</button>
 </mat-menu>
 
@@ -143,8 +207,13 @@
   <button mat-menu-item [routerLink]="['/templates']">{{ "Toolbar_Component.lblTemplate" | translate }}</button>
 </mat-menu>
 
-<mat-menu #selfServiceMenu="matMenu" [overlapTrigger]="false" yPosition="above" xPosition="before"
-  backdropClass="mymenu">
+<mat-menu
+  #selfServiceMenu="matMenu"
+  [overlapTrigger]="false"
+  yPosition="above"
+  xPosition="before"
+  backdropClass="mymenu"
+>
   <button mat-menu-item [routerLink]="['/self-service/users']">
     {{ "Toolbar_Component.lblUserManagement" | translate }}
   </button>
@@ -157,8 +226,13 @@
 </mat-menu>
 
 <!-- Application User Help Menu -->
-<mat-menu #applicationMenu="matMenu" [overlapTrigger]="false" yPosition="above" xPosition="before"
-  backdropClass="mymenu">
+<mat-menu
+  #applicationMenu="matMenu"
+  [overlapTrigger]="false"
+  yPosition="above"
+  xPosition="before"
+  backdropClass="mymenu"
+>
   <button mat-menu-item (click)="help()">
     <mat-icon matListIcon>
       <fa-icon icon="question-circle" size="sm"></fa-icon>
