--- a/src/app/transactions/view-transaction/view-transaction.component.html
+++ b/src/app/transactions/view-transaction/view-transaction.component.html
@@ -4,223 +4,194 @@
   </div>
 </div>
 <div class="container" fxLayout="column" fxLayoutGap="2%">
-
-    <mat-card>
-      <div *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center; background: white">
-        <mat-progress-spinner color="warn" mode="indeterminate"> </mat-progress-spinner>
-      </div>
-      <div fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column">
-        <div fxFlex.gt-sm="50%" fxLayout="row wrap" class="content">
-          <div fxFlex="100%">
-            Loại giao dịch :
-            <span style="color: green; font-weight: bold" *ngIf="transactionInfo.type == 'cash'">RÚT TIỀN MẶT</span>
-            <span style="color: green; font-weight: bold" *ngIf="transactionInfo.type == 'rollTerm'">ĐÁO HẠN THẺ</span>
-
-          </div>
-          <div fxFlex="100%" fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column">
-            <div fxFlex.gt-sm="30%">Thẻ thực hiện giao dịch</div>
-            <div fxFlex.gt-sm="70%" style="color: blue; font-weight: bold">
-              {{ transactionInfo.accountNumber }}
-            </div>
-          </div>
-          <div fxFlex="100%" fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column" class="content">
-            <div fxFlex.gt-sm="10%">Loại thẻ</div>
-            <div fxFlex.gt-sm="15%" style="color: blue; font-weight: bold">
-              {{ transactionInfo.cardType }}
-            </div>
-            <div fxFlex.gt-sm="20%">Của ngân hàng</div>
-            <div fxFlex.gt-sm="55%" style="color: blue; font-weight: bold">
-              {{ transactionInfo.bankName }}
-            </div>
-          </div>
-          <div
-            fxFlex="100%"
-            fxLayout="row wrap"
-            fxLayout.sm="column"
-            fxLayout.xs="column"
-            *ngIf="transactionInfo.type == 'cash'"
+  <mat-card>
+    <div *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center; background: white">
+      <mat-progress-spinner color="warn" mode="indeterminate"> </mat-progress-spinner>
+    </div>
+    <div fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column">
+      <div fxFlex.gt-sm="50%" fxLayout="row wrap" class="content">
+        <div fxFlex="100%">
+          Loại giao dịch :
+          <span style="color: green; font-weight: bold" *ngIf="transactionInfo.type == 'cash'">RÚT TIỀN MẶT</span>
+          <span style="color: green; font-weight: bold" *ngIf="transactionInfo.type == 'rollTerm'"
+            >BÁN HÀNG CÔNG NỢ</span
           >
-            <div fxFlex.gt-sm="50%">
-              <mat-form-field appearance="fill">
-                <mat-label>Tài khoản nhận tiền</mat-label>
-                <input
-                  style="color: blue; font-weight: bold"
-                  matNativeControl
-                  [(ngModel)]="transactionInfo.accountCash"
-                  disabled
-                />
-
-              </mat-form-field>
-            </div>
-            <div fxFlex.gt-sm="50%">
-              <mat-form-field appearance="fill">
-                <mat-label>Loại giao dịch </mat-label>
-                <select
-                  style="color: blue; font-weight: bold"
-                  matNativeControl
-                  [(ngModel)]="transactionInfo.productId"
-                  disabled
-                >
-                  <option value="CA01">RTM thông thường</option>
-                  <option value="TEST">Test thẻ</option>
-                  <option value="CA02">Lô lẻ</option>
-                </select>
-              </mat-form-field>
-            </div>
-          </div>
-
-          <div fxFlex="100%" fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column">
-
-            <div fxFlex.gt-sm="30%">
-              <mat-form-field>
-                <mat-label>Số tiền giao dịch</mat-label>
-                <input
-                  type="text"
-                  [ngModel]="transactionInfo.requestAmount"
-                  class="center"
-                  matInput
-                  disabled
-                  #amountTransaction
-                />
-               </mat-form-field>
-            </div>
-            <div fxFlex.gt-sm="10%">
-              <mat-form-field>
-                <mat-label>Phí (%/giá trị giao dịch)</mat-label>
-                <input
-                  type="text"
-                  class="center"
-                  matInput
-                  disabled
-                  [ngModel]="transactionInfo.feeRate"
-                />
-              </mat-form-field>
-            </div>
+        </div>
+        <div fxFlex="100%" fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column">
+          <div fxFlex.gt-sm="30%">Thẻ thực hiện giao dịch</div>
+          <div fxFlex.gt-sm="70%" style="color: blue; font-weight: bold">
+            {{ transactionInfo.accountNumber }}
           </div>
         </div>
-        <div fxFlex.gt-sm="50%" fxLayout="row wrap">
-          <div fxFlex="100%" fxLayout="row wrap" class="content">
-            <div fxFlex="30%">Tên khách hàng</div>
-            <div fxFlex="60%" style="color: blue; font-weight: bold" class="left">
-              {{ transactionInfo.customerName | uppercase }}
-            </div>
+        <div fxFlex="100%" fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column" class="content">
+          <div fxFlex.gt-sm="10%">Loại thẻ</div>
+          <div fxFlex.gt-sm="15%" style="color: blue; font-weight: bold">
+            {{ transactionInfo.cardType }}
           </div>
-          <div fxFlex="100%" fxLayout="row wrap" class="content">
-            <div fxFlex="30%">Thuộc đại lý</div>
-            <div fxFlex="60%" style="color: blue; font-weight: bold" class="left">
-              {{ transactionInfo.groupName | uppercase }}
-            </div>
-          </div>
-          <div fxFlex="100%" fxLayout="row wrap" class="content">
-            <div fxFlex="30%">Chi nhánh</div>
-            <div fxFlex="60%" style="color: blue; font-weight: bold" class="left">
-              {{ transactionInfo.officeName | uppercase }}
-            </div>
-          </div>
-          <div fxFlex="100%" fxLayout="row wrap" class="content">
-            <div fxFlex="30%">Người tạo</div>
-            <div fxFlex="60%" style="color: blue; font-weight: bold" class="left">
-              {{ transactionInfo.staffName | uppercase }}
-            </div>
-          </div>
-          <div fxFlex="100%" fxLayout="row wrap">
-            <div fxFlex="100%" fxLayout="row wrap" class="content">
-              <div fxFlex="100%" style="color: green; font-weight: bold">Thông tin về thu chi giao dịch</div>
-            </div>
-
-            <div fxFlex="100%" fxLayout="row wrap" class="content m-l-20">
-              <div fxFlex="40%">Giá trị giao dịch</div>
-              <div fxFlex="20%">{{ formatCurrency(transactionInfo.terminalAmount) }}</div>
-              <div fxFlex="20%">Tỉ lệ</div>
-            </div>
-            <div fxFlex="100%" style="color: red; font-weight: bold" fxLayout="row wrap" class="content m-l-20">
-              Thu/chi bằng tiền mặt
-            </div>
-            <div class="m-l-10" fxFlex="100%" fxLayout="row wrap" class="m-l-20 content">
-              <div fxFlex="40%">Thực cho khách hàng</div>
-              <div fxFlex="20%">{{ formatCurrency(transactionInfo.terminalAmount) }}</div>
-              <div fxFlex="20%"></div>
-            </div>
-            <div class="m-l-10" fxFlex="100%" fxLayout="row wrap" class="m-l-20 content">
-              <div fxFlex="40%">Phí thu khách hàng</div>
-              <div fxFlex="20%">{{ formatCurrency(transactionInfo.feeAmount) }}</div>
-              <div fxFlex="20%">{{ transactionInfo.feeRate }}%</div>
-            </div>
-
-            <div fxFlex="100%" fxLayout="row wrap" class="content m-l-20">
-              <button (click)="this.downloadVoucherTransaction()" mat-raised-button color="primary">
-                <fa-icon icon="download"></fa-icon>&nbsp;&nbsp; Tải hóa đơn
-              </button>
-            </div>
+          <div fxFlex.gt-sm="20%">Của ngân hàng</div>
+          <div fxFlex.gt-sm="55%" style="color: blue; font-weight: bold">
+            {{ transactionInfo.bankName }}
           </div>
         </div>
-      </div>
-    </mat-card>
-    <mat-card fxLayout="row wrap" class="m-0">
-      <h3
-        fxFlex
-        align="center"
-        style="color: blue; font-weight: bold"
-      >
-        Chọn máy POS để sử dụng giao dịch
-      </h3>
-
-      <div
-        fxFlex="100%"
-        fxLayout.sm="column"
-        fxLayout.xs="column"
-      >
-        <div fxFlex.gt-sm="30%" fxLayout="row wrap" class="content">
-          <div fxFlex="100%">
-            <mat-form-field style="width: 80%" appearance="fill">
-              <mat-label>Máy POS làm giao dịch</mat-label>
+        <div
+          fxFlex="100%"
+          fxLayout="row wrap"
+          fxLayout.sm="column"
+          fxLayout.xs="column"
+          *ngIf="transactionInfo.type == 'cash'"
+        >
+          <div fxFlex.gt-sm="50%">
+            <mat-form-field appearance="fill">
+              <mat-label>Tài khoản nhận tiền</mat-label>
               <input
-                disabled
-                [(ngModel)]="transactionInfo.terminalName"
+                style="color: blue; font-weight: bold"
                 matNativeControl
-              />
-            </mat-form-field>
-          </div>
-        </div>
-        <div fxFlex.gt-sm="16%" fxLayout="row wrap" class="content">
-          <div fxFlex="100%">
-            <mat-form-field>
-              <mat-label>Số tiền cần quẹt(VNĐ)</mat-label>
-              <input disabled matInput [ngModel]="transactionInfo.invoiceAmount" />
-            </mat-form-field>
-          </div>
-        </div>
-        <div fxFlex.gt-sm="16%" fxLayout="row wrap" class="content">
-          <div fxFlex="100%">
-            <mat-form-field>
-              <mat-label>Số tiền trên bill do POS in ra</mat-label>
-              <input
-                matInput
-                #amountPosBill
-                [ngModel]="transactionInfo.terminalAmount"
+                [(ngModel)]="transactionInfo.accountCash"
                 disabled
               />
             </mat-form-field>
           </div>
-        </div>
-        <div fxFlex.gt-sm="19%" fxLayout="row wrap" class="content">
-          <div fxFlex="80%">
-            <mat-form-field>
-              <mat-label> Số batch</mat-label>
-              <input matInput disabled [ngModel]="transactionInfo.batchNo" />
-            </mat-form-field>
-          </div>
-        </div>
-        <div fxFlex.gt-sm="19%" fxLayout="row wrap" class="content">
-          <div fxFlex="80%">
-            <mat-form-field>
-              <mat-label> Số trace</mat-label>
-              <input matInput disabled [ngModel]="transactionInfo.traceNo" />
+          <div fxFlex.gt-sm="50%">
+            <mat-form-field appearance="fill">
+              <mat-label>Loại giao dịch </mat-label>
+              <select
+                style="color: blue; font-weight: bold"
+                matNativeControl
+                [(ngModel)]="transactionInfo.productId"
+                disabled
+              >
+                <option value="CA01">RTM thông thường</option>
+                <option value="TEST">Test thẻ</option>
+                <option value="CA02">Lô lẻ</option>
+              </select>
             </mat-form-field>
           </div>
         </div>
 
+        <div fxFlex="100%" fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column">
+          <div fxFlex.gt-sm="30%">
+            <mat-form-field>
+              <mat-label>Số tiền giao dịch</mat-label>
+              <input
+                type="text"
+                [ngModel]="transactionInfo.requestAmount"
+                class="center"
+                matInput
+                disabled
+                #amountTransaction
+              />
+            </mat-form-field>
+          </div>
+          <div fxFlex.gt-sm="10%">
+            <mat-form-field>
+              <mat-label>Phí (%/giá trị giao dịch)</mat-label>
+              <input type="text" class="center" matInput disabled [ngModel]="transactionInfo.feeRate" />
+            </mat-form-field>
+          </div>
+        </div>
       </div>
+      <div fxFlex.gt-sm="50%" fxLayout="row wrap">
+        <div fxFlex="100%" fxLayout="row wrap" class="content">
+          <div fxFlex="30%">Tên khách hàng</div>
+          <div fxFlex="60%" style="color: blue; font-weight: bold" class="left">
+            {{ transactionInfo.customerName | uppercase }}
+          </div>
+        </div>
+        <div fxFlex="100%" fxLayout="row wrap" class="content">
+          <div fxFlex="30%">Thuộc đại lý</div>
+          <div fxFlex="60%" style="color: blue; font-weight: bold" class="left">
+            {{ transactionInfo.groupName | uppercase }}
+          </div>
+        </div>
+        <div fxFlex="100%" fxLayout="row wrap" class="content">
+          <div fxFlex="30%">Chi nhánh</div>
+          <div fxFlex="60%" style="color: blue; font-weight: bold" class="left">
+            {{ transactionInfo.officeName | uppercase }}
+          </div>
+        </div>
+        <div fxFlex="100%" fxLayout="row wrap" class="content">
+          <div fxFlex="30%">Người tạo</div>
+          <div fxFlex="60%" style="color: blue; font-weight: bold" class="left">
+            {{ transactionInfo.staffName | uppercase }}
+          </div>
+        </div>
+        <div fxFlex="100%" fxLayout="row wrap">
+          <div fxFlex="100%" fxLayout="row wrap" class="content">
+            <div fxFlex="100%" style="color: green; font-weight: bold">Thông tin về thu chi giao dịch</div>
+          </div>
 
-    </mat-card>
+          <div fxFlex="100%" fxLayout="row wrap" class="content m-l-20">
+            <div fxFlex="40%">Giá trị giao dịch</div>
+            <div fxFlex="20%">{{ formatCurrency(transactionInfo.terminalAmount) }}</div>
+            <div fxFlex="20%">Tỉ lệ</div>
+          </div>
+          <div fxFlex="100%" style="color: red; font-weight: bold" fxLayout="row wrap" class="content m-l-20">
+            Thu/chi bằng tiền mặt
+          </div>
+          <div class="m-l-10" fxFlex="100%" fxLayout="row wrap" class="m-l-20 content">
+            <div fxFlex="40%">Thực cho khách hàng</div>
+            <div fxFlex="20%">{{ formatCurrency(transactionInfo.terminalAmount) }}</div>
+            <div fxFlex="20%"></div>
+          </div>
+          <div class="m-l-10" fxFlex="100%" fxLayout="row wrap" class="m-l-20 content">
+            <div fxFlex="40%">Phí thu khách hàng</div>
+            <div fxFlex="20%">{{ formatCurrency(transactionInfo.feeAmount) }}</div>
+            <div fxFlex="20%">{{ transactionInfo.feeRate }}%</div>
+          </div>
+
+          <div fxFlex="100%" fxLayout="row wrap" class="content m-l-20">
+            <button (click)="this.downloadVoucherTransaction()" mat-raised-button color="primary">
+              <fa-icon icon="download"></fa-icon>&nbsp;&nbsp; Tải hóa đơn
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </mat-card>
+  <mat-card fxLayout="row wrap" class="m-0">
+    <h3 fxFlex align="center" style="color: blue; font-weight: bold">Chọn máy POS để sử dụng giao dịch</h3>
+
+    <div fxFlex="100%" fxLayout.sm="column" fxLayout.xs="column">
+      <div fxFlex.gt-sm="30%" fxLayout="row wrap" class="content">
+        <div fxFlex="100%">
+          <mat-form-field style="width: 80%" appearance="fill">
+            <mat-label>Máy POS làm giao dịch</mat-label>
+            <input disabled [(ngModel)]="transactionInfo.terminalName" matNativeControl />
+          </mat-form-field>
+        </div>
+      </div>
+      <div fxFlex.gt-sm="16%" fxLayout="row wrap" class="content">
+        <div fxFlex="100%">
+          <mat-form-field>
+            <mat-label>Số tiền cần quẹt(VNĐ)</mat-label>
+            <input disabled matInput [ngModel]="transactionInfo.invoiceAmount" />
+          </mat-form-field>
+        </div>
+      </div>
+      <div fxFlex.gt-sm="16%" fxLayout="row wrap" class="content">
+        <div fxFlex="100%">
+          <mat-form-field>
+            <mat-label>Số tiền trên bill do POS in ra</mat-label>
+            <input matInput #amountPosBill [ngModel]="transactionInfo.terminalAmount" disabled />
+          </mat-form-field>
+        </div>
+      </div>
+      <div fxFlex.gt-sm="19%" fxLayout="row wrap" class="content">
+        <div fxFlex="80%">
+          <mat-form-field>
+            <mat-label> Số batch</mat-label>
+            <input matInput disabled [ngModel]="transactionInfo.batchNo" />
+          </mat-form-field>
+        </div>
+      </div>
+      <div fxFlex.gt-sm="19%" fxLayout="row wrap" class="content">
+        <div fxFlex="80%">
+          <mat-form-field>
+            <mat-label> Số trace</mat-label>
+            <input matInput disabled [ngModel]="transactionInfo.traceNo" />
+          </mat-form-field>
+        </div>
+      </div>
+    </div>
+  </mat-card>
 </div>
