convert rtm to BHTM, "Rút tiền mặt" to "Bán hàng tiền mặt"

--- a/src/app/clients/clients-view/identities-tab/identities-tab.component.html
+++ b/src/app/clients/clients-view/identities-tab/identities-tab.component.html
@@ -89,7 +89,7 @@
                 color="primary"
                 (click)="routeToMakeTransaction(identity.id, 'cash', identity.documentKey)"
                 *midasHasPermission="'TXN_CREATE'"
-                matTooltip="Rút tiền mặt"
+                matTooltip="Bán hàng tiền mặt"
               >
                 <i class="fas fa-money-bill-wave"></i>
               </button>
